fix navbar on safari

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -169,8 +169,7 @@ button:active {
     place-items: center;
     place-content: center;
     gap: 1rem;
-    height: 5rem;
-    padding: 1rem 0;
+    padding: 1.5rem 0.5rem;
     font-family: Mulish;
     font-weight: 800;
     font-size: 1.5rem;
@@ -988,14 +987,12 @@ nav .burger.open span:nth-of-type(3) {
 @media (min-width: 1100px) {
     nav ul {
         display: flex;
-        width: 95%;
-        flex-grow: 2;
-        justify-content: end;
         align-items: center;
         position: relative;
         padding: 1rem;
         gap: 5rem;
         font-size: 1.3rem;
+        margin-left: auto;
     }
 
     nav ul li {
@@ -1003,27 +1000,16 @@ nav .burger.open span:nth-of-type(3) {
         font-weight: 600;
     }
 
-    nav ul :last-child {
-        justify-self: end;
-    }
-
     nav .burger {
         display: none;
     }
 
     nav a.big-link {
-        padding: 2rem;
-        height: 3rem;
         font-size: 1.3rem;
     }
 
     nav a {
         border-bottom: none;
-    }
-
-    nav a.external::after {
-        padding: unset;
-        content: none;
     }
 
     .individual-project {
@@ -1032,12 +1018,5 @@ nav .burger.open span:nth-of-type(3) {
 
     .about {
         margin-top: 4rem;
-    }
-}
-
-/* Increased Nav menu gap */
-@media (min-width: 1500px) {
-    nav ul {
-        gap: 8rem;
     }
 }
